# sdl3_opengl_module_c

./: CMakeLists.txt  README.md  run.bat
docs/: cglm.md  cimgui.md  module_font.md  opengl.md  transform3dhierarchy.md
examples/: sdl3_cimgui.c  sdl3_cimgui_font.c  sdl3_cimgui_load_font.c  sdl3_glad_font.c  sdl3_glad_font02.c  sdl3_glad_font_cube02.c  sdl3_glad_font_cube03.c  sdl3_glew_font.c  sdl3_opengl_font.c
include/: module_cimgui.h  module_cube.h  module_flecs.h  module_font.h  module_lua.h
include/glad/: gl.h
resources/: script.lua
src/: main.c  module_cimgui.c  module_cube.c  module_flecs.c  module_font.c  module_lua.c  sdl3_glad_cimgui.c  sdl3_glad_cimgui02.c  sdl3_glad_cimgui_font.c  sdl3_glad_cimgui_font02.c  sdl3_glad_cimgui_transformer3d.c  sdl3_glad_cimgui_transformer3d02.c  sdl3_glad_cimgui_transformer3d03.c  sdl3_glad_cimgui_transformer3d04.c  sdl3_glad_cimgui_transformer3d05.c  sdl3_glad_cimgui_transformer3d06.c  sdl3_glad_cimgui_transformer3d07.c  sdl3_glad_cimgui_transformer3d08.c  sdl3_glad_cimgui_transformer3d09.c  sdl3_glad_cimgui_transformer3d10.c  sdl3_glad_cimgui_transformer3d11.c  sdl3_glad_cimgui_transformer3d12.c  sdl3_glad_cimgui_transformer3d13.c  sdl3_glad_font_cube04.c
